# HPDM139_assignment

./: .gitignore  404.html  README.md  contributors.txt  demo.ipynb  demo.py  environment.yml  fairness-calculation.ipynb  fairness-functions.py  fairness_dev_env.yml  fairness_toolkit_tutorial.ipynb  index.html  install_and_run.md  metrics_demo.ipynb  mkdocs.yml  objects.inv  processing_demo.ipynb  pyproject.toml  simple-example.py  test.py  usage.ipynb  visualisation_demo.ipynb
api_reference/: index.html
binder/: environment.yml
design_decisions/: index.html
dfair/: __init__.py  core.py
docs/: api_reference.md  design_decisions.md  index.md  tutorial.md
docs/AI_usage/: AI_prompts_hyperlinks_NB.md  Use_of_AI.md
docs/team_portfolio/: contents.md  gen_ai.md  meeting_4_minutes.md  meeting_5_agenda.md  meeting_7_minutes.md
examples/: data_demo.ipynb  data_load_demo.ipynb  metrics_demo.ipynb  single_metrics_demo.ipynb  uci_heart_demo.ipynb  visualisation_demo.ipynb
fairness_pkg/: metrics.py
local_git files/: TestPyPI-Recovery-Codes-and-API-key.txt
single_fairness_metric/: single_metrics.py
src/fairness/: adapters.py  metrics.py  preprocess.py
team_portfolio/contents/: index.html
team_portfolio/gen_ai/: index.html
team_portfolio/meeing_7_minutes/: index.html
team_portfolio/meeting_1_agenda/: index.html
team_portfolio/meeting_1_minutes/: index.html
team_portfolio/meeting_2_agenda/: index.html
team_portfolio/meeting_2_minutes/: index.html
team_portfolio/meeting_3_agenda/: index.html
tests/: test_metrics.py
tutorial/: index.html
(+11 files in other folders)
